# DetectorCalibration

./: .gitignore  README.md  pyproject.toml
calibration/common/: config.py  fit_utils.py  particles.py  plot_utils.py
calibration/its/: calibrator.py  models.py
calibration/purity/: purity_analysis.py  purity_fitter.py  purity_models.py  purity_sideband_fit.py
calibration/tof/: calibrator.py  models.py
calibration/tpc/: calibrator.py  models.py
configs/: LHC23_pass5_ITS.yml  LHC23_pass5_TOF.yml  LHC23_pass5_TPC.yml  LHC23_pass5_purity.yml  LHC24_pass1_pp_ITS.yml  LHC24_pass1_pp_TPC.yml  LHC24_pass3_ITS.yml  LHC24_pass3_TPC.yml  LHC24_pass3_purity.yml  LHC25_pass1_ITS.yml  LHC25_pass1_TPC.yml  LHC25_pass1_pp_ITS.yml  LHC25_pass1_pp_TPC.yml  LHC25_pass1_purity.yml  LHC25g11_TPC.yml  LHC26c6.yaml
scripts/: run_its.py  run_momentum_resolution_he3.py  run_purity.py  run_tof.py  run_tpc.py
